@@ -1,5 +1,6 @@
 package co.com.pragma.securityjwt.jwt;
 
+import co.com.pragma.model.rol.gateways.RolRepository;
 import org.springframework.security.authentication.ReactiveAuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -7,16 +8,17 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 import reactor.core.publisher.Mono;
 
-import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Component
 public class JwtAuthenticationManager implements ReactiveAuthenticationManager {
     private final JwtProvider jwtProvider;
+    private final RolRepository rolRepository;
 
-    public JwtAuthenticationManager(JwtProvider jwtProvider) {
+    public JwtAuthenticationManager(JwtProvider jwtProvider, RolRepository rolRepository) {
         this.jwtProvider = jwtProvider;
+        this.rolRepository = rolRepository;
     }
 
     @Override
@@ -25,15 +27,17 @@ public class JwtAuthenticationManager implements ReactiveAuthenticationManager {
                 .map(auth -> jwtProvider.getClaims(auth.getCredentials().toString()))
                 .log()
                 .onErrorResume(e -> Mono.error(new Throwable("bad token")))
-                .map(claims -> new UsernamePasswordAuthenticationToken(
-                        claims.getSubject(),
-                        null,
-                        Stream.of(claims.get("roles"))
-                                .map(role -> (List<Map<String, String>>) role)
-                                .flatMap(role -> role.stream()
-                                        .map(r -> r.get("authority"))
-                                        .map(SimpleGrantedAuthority::new))
-                                .toList())
-                );
+                .flatMap(claims -> {
+                    String roleId = (String) claims.get("rol");
+
+                    return rolRepository.findById(roleId)  // Suponemos que este método devuelve un Mono<String>
+                            .map(roleName -> new UsernamePasswordAuthenticationToken(
+                                    claims.getSubject(),  // El 'sub' es el usuario
+                                    null,  // No usamos la contraseña en este caso
+                                    Stream.of(new SimpleGrantedAuthority("ROLE_" + roleName.getCode()))  // Convertimos el rol en autoridad
+                                            .collect(Collectors.toList())  // Lista de autoridades
+                            ));
+
+                });
     }
 }
